--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advice-generator",
+  "name": "Advice-generator-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "gsap": "^3.10.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
